Change license to MIT

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 
 v1.0
 - forked from petermaloney @ Git commit 766ef0f ( https://github.com/petermaloney/walking_light/tree/766ef0f )
+- changed code license to MIT
 
 v0.7
 ----
