--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@ TODO:
 - clean up
 - rename
 - walking_light_debug should only enable debugging for player invoking command
+- replace chat commands with single command "walking_light"
