Remove deprecated method walking_light.register_tool

--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,7 @@ v1.0
 - megatorch can be disabled via setting
 - added localization support
 - added option to set custom light radius when registering item or armor
+- removed method "walking_light.register_tool"
 
 petermaloney
 ------------
