--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 
 TODO:
 - clean up
-- rename
-- walking_light_debug should only enable debugging for player invoking command
-- replace chat commands with single command "walking_light"
+- wlight_debug should only enable debugging for player invoking command
+- replace chat commands with single command "wlight"
