--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,6 @@
 v1.0
 ----
 - forked from petermaloney @ Git commit 766ef0f ( https://github.com/petermaloney/walking_light/tree/766ef0f )
-- renamed to "wlight"
 - changed code license to MIT
 - added mod.conf
 - re-created underlay image
@@ -15,6 +14,8 @@ v1.0
 - added localization support
 - added option to set custom light radius when registering item or armor
 - removed method "walking_light.register_tool"
+- renamed to "wlight"
+- consolidated chat commands into single "wlight" command
 
 petermaloney
 ------------
