--- a/locale/template.txt
+++ b/locale/template.txt
@@ -2,11 +2,18 @@ Translated by:
 
 
 # chat.lua
-Remove light nodes from the area.=
-Add walking_light:light to a position, without a player owning it.=
-Change to debug mode, so light blocks are visible.=
-You need the server privilege to use @1=
-Failed... infinite loop detected=
+Manage lighted nodes and debugging.=
+Commands:=
+Options:=
+command=
+radius=
+Missing command parameter.=
+Missing radius parameter.=
+Add lighting to current position.=
+Remove lighting from current position.=
+Toggle illuminated nodes visible mark for debugging.=
+Area radius (default: 20).=
+Failed... infinite loop detected.=
 Done.=
 
 # nodes.lua
