Fix "/wlight add" command not able to illuminate more than one node

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,7 @@ v1.0
 - removed method "walking_light.register_tool"
 - renamed to "wlight"
 - consolidated chat commands into single "wlight" command
+- fixed "/wlight add" command not able to illuminate more than one node
 
 petermaloney
 ------------
