Add to TODO list

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,5 @@
 TODO:
 - wlight_debug should only enable debugging for player invoking command
 - use spherical area when calculating radius for chat commands
+- support aliased items
+- dropped items should emit light
